# linkedin-crawler

./: .coveragerc  .gitignore  LICENSE  Makefile  README.md  config.sample.py  format_emails.py  main.py  pyproject.toml  settings.example.toml
linkedin_crawler/: __init__.py  __main__.py  api.py  config.py  format_emails.py
tests/: test_main.py
tests/resources/: graph_response.json  people_result.html
