[project]
name = "linkedin_crawler"
version = "1.0"
dependencies = [
    "dynaconf",       # Config files
    "pytest",         # Tests
    "pytest-cov",     # Code coverage
    "click",          # CLI interface
    "requests-mock"   # Mock requests
]
authors = [
    { name = "Jan-Jaap Korpershoek" },
]
description = """Obtain employee names and email addresses based on LinkedIn data"""
readme = "README.md"
license = {file = "LICENSE"}
keywords = []

[tool.setuptools]
packages = ["linkedin_crawler"]

[project.scripts]
linkedin_crawler = "linkedin_crawler:__main__.main"
